# ParticleClassification

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  cnn.yaml
notebooks/: 01_classical_baseline.ipynb  02_magik_cytoplasmic.ipynb  03_magik_simulated.ipynb  04_magik_video.ipynb  magik.ipynb  magik_traj_cytoplasmic.ipynb  magik_vid_cytoplasmic.ipynb
scripts/: build_video_dataset.py  optimize.py  spt_viewer.py  sweep.py  train.py  train_cnn.py
trajan/: data.py  dataset.py  features.py  graph.py  io.py  spt_viewer.py  trainer.py  transforms.py  video_crops.py  viewer.py  visualization.py
trajan/custom_models/: magik.py
